Java17 update + cleanup + fixes.