@@ -1,6 +1,9 @@
 /* (C) 2017-2023 Piter.NL
  * Use of this code allowed under restrictions. See LICENSE.txt for details.
  */
+/* (C) 2017-2023 Piter.NL
+ * Use of this code allowed under restrictions. See LICENSE.txt for details.
+ */
 package nl.piter.web.t7.authentication.user;
 
 import com.google.common.base.Strings;
@@ -14,7 +17,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Mapper which maps Users and Authorities from DAO to AppUsers and UserDetail objects.
@@ -85,34 +87,34 @@ public final class T7AppUserMapper {
                 enabled);
     }
 
-    public static List<GrantedAuthority> mapToGrantedAuthorities(List<Authority> authorities) {
+    public static List<? extends GrantedAuthority> mapToGrantedAuthorities(List<Authority> authorities) {
         if (authorities == null) {
-            return new ArrayList();
+            return new ArrayList<>();
         }
         return authorities.stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.getAuthorityName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Filter authorities if defined in AuthorityName enumeration and return as List of GrantedAuthorities.
      */
-    public static List<GrantedAuthority> stringMapToGrantedAuthorities(List<String> authorities) {
+    public static List<? extends GrantedAuthority> stringMapToGrantedAuthorities(List<String> authorities) {
         if (authorities == null) {
-            return new ArrayList();
+            return new ArrayList<>();
         }
         return authorities.stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> toStringList(Collection<? extends GrantedAuthority> authorities) {
         if (authorities == null) {
-            return new ArrayList();
+            return new ArrayList<>();
         }
         return authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static T7LdapUser toT7LdapUser(LdapPerson ldapPerson) {
